2008-01-13  Wakaba  <wakaba@suika.fam.cx>

	* Window.pm: New Perl module.

	* Document.pm (default_view): Implemented.

	* Element.pm (current_style): Implemented.

2008-01-06  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (css_text): Allow to shorten a complete
	set of longhand properties.
	(get_property_priority): Implemented.
	(CSSComputedStyleDeclaration AUTOLOAD): Implemented for reflecting
	attributes.

2008-01-04  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (css_text): Allow |{compute_multiple}|
	as well as |{compute}| as a way to filter out longhand
	properties.  Sort properties by names for readability.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (css_text): Output |undef| property
	information for debugging.

	* CSSStyleSheet.pm (manakai_base_uri): New attribute.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (CSSComputedStyleDeclaration): New class.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm, Document.pm (___query_selector_all): New internal
	method.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm: Make simple-selector-sequence-matching
	an independent function.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (AUTOLOAD): Getter for attributes
	reflecting CSS property is implemented.
	(css_text): Getter is implemented.

2007-12-24  Wakaba  <wakaba@suika.fam.cx>

	* CSSRule.pm (selector_text): Ad hoc support for namespace prefixes.
	(CSSNamespaceRule.css_text): Getter implemented.

	* CSSStyleSheet.pm (manakai_is_default_namespace,
	manakai_lookup_namespace_prefix): New methods.

2007-12-23  Wakaba  <wakaba@suika.fam.cx>

	* CSSRule.pm (@charset.css_text): Implemented.

2007-12-23  Wakaba  <wakaba@suika.fam.cx>

	* CSSRule.pm (type, css_text): Typo fixed.
	(____new): s/_selector/_selectors/g;
	(CSSStyleRule.css_text, selectors_text): Ad hoc implementation.

	* CSSStyleDeclaration.pm (css_text): Ad hoc implementation.
