@@ -1,3 +1,8 @@
+2008-01-14  Wakaba  <wakaba@suika.fam.cx>
+
+	* CSSRule.pm (selector_text): Use |serialize_selector_text|
+	to get better result.
+
 2008-01-13  Wakaba  <wakaba@suika.fam.cx>
 
 	* Window.pm: New Perl module.
